--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <p style="color:white">All Tutorial posts from the Patreon</p>
 
         <a href="#videos">
-            <div class="LinkButton">Videos (8) </div>
+            <div class="LinkButton">Videos (9) </div>
         </a>
         <a href="#articles">
-            <div class="LinkButton"> Articles (45) </div>
+            <div class="LinkButton"> Articles (52) </div>
         </a>
         <a href="#shaders">
             <div class="LinkButton">Unity/Shaders (41) </div>
@@ -130,8 +130,12 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/DIE3qfCGXl8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p></p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/B975bBfHTTg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p></p>
+
         <div class="headertext" style="font-size: 20px">
-            <a name="articles"></a> Articles
+            <a name="articles"></a> Articles on Shaders and other things
         </div>
         <p></p>
         <a href="https://www.patreon.com/posts/12551796" target="_blank">
@@ -329,9 +333,11 @@
             </div>
 
 
-            <div class="patreon-link">
-
-            </div>
+            <a href="https://www.patreon.com/posts/42112548" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
 
         </a>
         <p></p>
@@ -884,9 +890,11 @@
             </div>
 
 
-            <div class="patreon-link">
-
-            </div>
+            <a href="https://www.patreon.com/posts/42662358" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
 
         </a>
         <p></p>
@@ -1109,10 +1117,178 @@
         </a>
         <p></p>
 
+        <a href="https://www.patreon.com/posts/41188449" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article46.jpg)">
+                <div class="number"> #46</div>
+                <div class="centered">URP Waterfall Shader</div>
+                <div class="date">09/2020</div>
+                <div class="description">URP Updated Waterfall</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+            <a href="https://www.patreon.com/posts/41199702" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/32716107" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article47.jpg)">
+                <div class="number"> #47</div>
+                <div class="centered">Moving Kat 3 </div>
+                <div class="date">10/2020</div>
+                <div class="description">Character Controller Ledge Climbing</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+            <a href="https://www.patreon.com/posts/43485524" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/42255564" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article48.jpg)">
+                <div class="number"> #48</div>
+                <div class="centered">Stylized Glass Shader </div>
+                <div class="date">10/2020</div>
+                <div class="description">Creating a cartoon glass effect</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+            <a href="https://www.patreon.com/posts/42779375" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/43026766" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article49.jpg)">
+                <div class="number"> #49</div>
+                <div class="centered">URP Stylized Glass Shader </div>
+                <div class="date">10/2020</div>
+                <div class="description">Creating a cartoon glass effect in Shader Graph</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+            <a href="https://www.patreon.com/posts/43182004" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/43816363" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article50.jpg)">
+                <div class="number"> #50</div>
+                <div class="centered">UI - Sprite Swapping Shader </div>
+                <div class="date">11/2020</div>
+                <div class="description">Sprite effects for URP and Built-In</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+            <a href="https://www.patreon.com/posts/44255626" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/40090373" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article51.jpg)">
+                <div class="number"> #51</div>
+                <div class="centered">Grass Geometry Shader with Interactivity </div>
+                <div class="date">12/2020</div>
+                <div class="description">(Part 1, the shader)</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+            <a href="https://www.patreon.com/posts/45177238" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/45320078" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article52.jpg)">
+                <div class="number"> #52</div>
+                <div class="centered">URP Tessellation </div>
+                <div class="date">12/2020</div>
+                <div class="description">Basic Tessellation setup in URP</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <div class="patreon-link">
+            </div>
+
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/40077798" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article53.jpg)">
+                <div class="number"> #52</div>
+                <div class="centered">Grass Geometry Shader with Interactivity </div>
+                <div class="date">01/2021</div>
+                <div class="description">(Part 2, the tool)</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/46530102" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
 
 
         <div class="headertext" style="font-size: 20px">
-            <a name="shaders"></a> Unity/ Shaders
+            <a name="shaders"></a> Unity/ Shaders Quick
         </div>
         <p></p>
 
