--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
+
     </script>
 
 
@@ -71,10 +72,10 @@
         <p style="color:white">All Tutorial posts from the Patreon and Youtube</p>
 
         <a href="#videos">
-            <div class="LinkButton">Videos (10) </div>
+            <div class="LinkButton">Videos (11) </div>
         </a>
         <a href="#articles">
-            <div class="LinkButton"> Articles (55) </div>
+            <div class="LinkButton"> Articles (63) </div>
         </a>
         <a href="#shaders">
             <div class="LinkButton">Unity/Shaders (41) </div>
@@ -135,6 +136,9 @@
         <p></p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xKJHL8nQiuM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p></p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/B975bBfHTTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p></p>
 
         <div class="headertext" style="font-size: 20px">
@@ -1335,6 +1339,194 @@
         </a>
         <p></p>
 
+        <a href="https://www.patreon.com/posts/49100194" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article56.jpg)">
+                <div class="number"> #56</div>
+                <div class="centered">BIRP Forward Decals Prototype</div>
+                <div class="date">03/2021</div>
+                <div class="description">Projecting Decals, bit experimental </div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/49338996" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/49899065" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article57.jpg)">
+                <div class="number"> #57</div>
+                <div class="centered">URP Forward Decals Prototype</div>
+                <div class="date">04/2021</div>
+                <div class="description">Projecting Decals, bit experimental </div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/49939876" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/51125313" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article58.jpg)">
+                <div class="number"> #58</div>
+                <div class="centered">Improved Shiny/Sparkly Shader</div>
+                <div class="date">05/2021</div>
+                <div class="description">More sparkly this time </div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/51479974" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/51480100" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article59.jpg)">
+                <div class="number"> #59</div>
+                <div class="centered">Shader Graph Improved Shiny/Sparkly Shader</div>
+                <div class="date">05/2021</div>
+                <div class="description">More sparkly this time in URP</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/51482939" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
+        <a href="https://www.patreon.com/posts/52073394" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article60.jpg)">
+                <div class="number"> #60</div>
+                <div class="centered">Potions/Poisons Asset Pack</div>
+                <div class="date">06/2021</div>
+                <div class="description">10 Free Potion Assets</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+            <a href="https://www.patreon.com/posts/52479169" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files BIRP ($10 Tier)
+                </div>
+            </a>
+            <a href="https://www.patreon.com/posts/52484865" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files URP ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/40078043" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article61.jpg)">
+                <div class="number"> #61</div>
+                <div class="centered">Twitch Chat Overlay</div>
+                <div class="date">06/2021</div>
+                <div class="description">Hook into Twitch Chat</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/52878609" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files BIRP/URP ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/53587750" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article62.jpg)">
+                <div class="number"> #62</div>
+                <div class="centered">Compute Shader Grass + Tool</div>
+                <div class="date">07/2021</div>
+                <div class="description">Compute Shader Version and Tool Update</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/53939857" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/54164790" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article63.jpg)">
+                <div class="number"> #63</div>
+                <div class="centered">URP Compute Shader Grass + Tool</div>
+                <div class="date">07/2021</div>
+                <div class="description">Compute Shader Version and Tool Update for URP</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+            <a href="https://www.patreon.com/posts/54214472" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+
+        </a>
+        <p></p>
 
 
         <div class="headertext" style="font-size: 20px">
@@ -2941,6 +3133,9 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
+
     </script>
 
-</body></html>
+</body>
+
+</html>
