--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
-
     </script>
 
 
@@ -230,7 +229,7 @@
                 <div class="date">05/2018</div>
                 <div class="description">How I got started with shaders (Non-Scary shader intro)</div>
 
-            </div>
+            </div>05
             <div class="normal-link">
                 Read Post
             </div>
@@ -3133,9 +3132,6 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
-
     </script>
 
-</body>
-
-</html>
+</body></html>
