--- a/newIndex.html
+++ b/newIndex.html
@@ -91,14 +91,20 @@
     </div>
 
     <div class="buttons">
-        <a href="#" onclick="showfilter('built-in');" style="font-size: 20px; color: aqua" class="togglelink"> Built-in </a>
-        <a href="#" onclick="showfilter('3d');" style="font-size: 20px" class="togglelink"> 3D </a>
+        <a href="#" onclick="showfilter('built-in');" style="background-color: #416eb3; border: 2px solid #8193ff;" class="typefilter"> Built-in </a>
+        <a href="#" onclick="showfilter('3d');" style="background-color: #c31f8b; border: 2px solid #ff00f6;" class="typefilter"> 3D </a>
+        <a href="#" onclick="showfilter('other');" style="background-color: #666666; border: 2px solid #bdbdbd;" class="typefilter"> Other </a>
+        <a href="#" onclick="showfilter('urp');" style="background-color: #5ecd68; border: 2px solid #91ff9b;" class="typefilter"> URP </a>
+        <a href="#" onclick="showfilter('shader-graph');" style="background-color: #5ad2b7; border: 2px solid #92ffe7;" class="typefilter"> Shader Graph </a>
+        <a href="#" onclick="showfilter('gameplay');" style="background-color: #ca9243; border: 2px solid #ffc470;" class="typefilter"> Gameplay </a>
+        <a href="#" onclick="showfilter('asset-pack');" style="background-color: #8d48cd; border: 2px solid #be79ff;" class="typefilter"> Asset Pack </a>
+        <a href="#" onclick="showfilter('design');" style="background-color: #3c422f; border: 2px solid #999c91;" class="typefilter"> Design </a>
 
     </div>
 
     <div id="modS" style=" width:100%;margin: auto">
-        <h2 style="color:white;text-align: center">Mod Search</h2>
-        <p style="color:white;text-align: center">Search name and description of mods</p>
+        <h2 style="color:white;text-align: center">Search</h2>
+        <p style="color:white;text-align: center">Search name and description of posts</p>
         <br>
         <div style="margin-right: auto; margin-left: auto; width: 300px;">
             <input type="text" style="margin-right: auto; margin-left: auto; width: 300px;" id="searchInput">
