just modelling left

--- a/newIndex.html
+++ b/newIndex.html
@@ -19,6 +19,7 @@
 
 
         });
+
     </script>
     <title>Minionsart Tutorial List</title>
 
@@ -36,9 +37,9 @@
             <div class="bottom-holder">
                 <div class="description" id="postdescription">Description of the Post</div>
 
-                <div class="normal-link" id="extralink">
+                <a class="normal-link" id="extralink">
                     extra link
-                </div>
+                </a>
 
                 <a class="patreon-link" id="patreonlink">
                     patreon link
@@ -99,6 +100,8 @@
         <a href="#" onclick="showfilter('gameplay');" style="background-color: #ca9243; border: 2px solid #ffc470;" class="typefilter"> Gameplay </a>
         <a href="#" onclick="showfilter('asset-pack');" style="background-color: #8d48cd; border: 2px solid #be79ff;" class="typefilter"> Asset Pack </a>
         <a href="#" onclick="showfilter('design');" style="background-color: #3c422f; border: 2px solid #999c91;" class="typefilter"> Design </a>
+        <a href="#" onclick="showfilter('texturing');" style="background-color: #c44e4e; border: 2px solid #f38e8e;" class="typefilter"> Textures </a>
+        <a href="#" onclick="showAllPosts();" style="background-color: #3c422f; border: 2px solid #999c91;" class="typefilter"> All </a>
 
     </div>
 
@@ -147,4 +150,7 @@
             }
         })
     });
-</script></html>
+
+</script>
+
+</html>
