--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
         });
 
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70751511-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-70751511-2');
+
+    </script>
     <title>MinionsArt Tutorials</title>
 
     <template id="test">
