--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 
         });
-
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -35,7 +34,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
-
     </script>
     <title>MinionsArt Tutorials</title>
 
@@ -84,13 +82,13 @@
 
             <div class="header2">Tutorials</div>
 
-            <a href="#" class="fa-brands fa-twitter"></a>
+            <a href="https://twitter.com/minionsart" class="fa-brands fa-twitter"></a>
 
-            <a href="#" class="fa-brands fa-youtube"></a>
+            <a href="https://www.youtube.com/c/MinionsArt" class="fa-brands fa-youtube"></a>
 
-            <a href="#" class="fa-brands fa-twitch"></a>
+            <a href="https://www.twitch.tv/minionsart" class="fa-brands fa-twitch"></a>
 
-            <a href="#" class="fa-brands fa-patreon"></a>
+            <a href="https://www.patreon.com/minionsart" class="fa-brands fa-patreon"></a>
 
 
 
@@ -160,7 +158,4 @@
             }
         })
     });
-
-</script>
-
-</html>
+</script></html>
