--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 
         });
+
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -34,6 +35,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
+
     </script>
     <title>MinionsArt Tutorials</title>
 
@@ -100,8 +102,8 @@
 
     <div id="modS" style=" width:100%;margin: auto; padding-top: 20px">
         <div style="margin-right: auto; margin-left: auto; width: 300px;">
-            <input type="text" style="margin-right: auto; margin-left: auto; width: 200px;" id="searchInput">
-            <input type="submit" value="Search" id="button">
+            <input type="text" placeholder="Search.." style="margin-right: auto; margin-left: auto; width: 200px;" id="searchInput">
+            <button type="submit" id="button"><i class="fa fa-search"></i></button>
 
 
         </div>
@@ -158,4 +160,7 @@
             }
         })
     });
-</script></html>
+
+</script>
+
+</html>
