--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <link rel="stylesheet" type="text/css" href="/tutorials/style.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+    <link href="http://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet">
     <link rel="shortcut icon" href="/tutorials/Images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script type="text/javascript" language="javascript" src="/tutorials/TutData.json"></script>
