--- a/index.html
+++ b/index.html
@@ -95,18 +95,10 @@
 
 
         </div>
-    </div>
 
 
 
 
-    <div id="modS" style=" width:100%;margin: auto; padding-top: 20px">
-        <div style="margin-right: auto; margin-left: auto; width: 300px;">
-            <input type="text" placeholder="Search.." style="margin-right: auto; margin-left: auto; width: 200px;" id="searchInput">
-            <button type="submit" id="button"><i class="fa fa-search"></i></button>
-
-
-        </div>
     </div>
 
     <div class="tab">
@@ -125,8 +117,18 @@
     </div>
 
 
-    <div class="mainbody">
 
+
+
+    <div class="mainbody">
+        <div id="modS" style=" width:400px;; padding-top: 10px; margin:auto">
+            <div style="margin-right: auto; margin-left: auto; width: 300px;">
+                <input type="text" placeholder="Search.." style="margin-right: auto; margin-left: auto; width: 200px;color: white" id="searchInput">
+                <button type="submit" id="button"><i class="fa fa-search"></i></button>
+
+
+            </div>
+        </div>
         <div class="grid-container" id="output"></div>
 
     </div>
