--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="mainbody">
         <div id="modS" style=" width:400px;; padding-top: 5px; margin:auto">
             <div style="margin-right: auto; margin-left: auto; width: 300px;">
-                <input type="text" placeholder="Search.." style="margin-right: auto; margin-left: auto; width: 200px;color: white" id="searchInput">
+                <input type="text" placeholder="Search.." style="margin-right: auto; margin-left: auto; width: 200px;color: black" id="searchInput">
                 <button type="submit" id="button"><i class="fa fa-search"></i></button>
 
 
