--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 
         });
-
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -35,7 +34,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
-
     </script>
     <title>MinionsArt Tutorials</title>
 
@@ -45,6 +43,7 @@
 
             <a class="preview-image-holder" id="linkBackground">
                 <div class="date" id="postdate">Post Date</div>
+                <div class="ogdate" id="originaldate">OG Date</div>
                 <div class="typeOfPost" id="type"></div>
                 <div class="centeredbox"></div>
                 <div class="centered" id="title">Title of the post</div>
@@ -162,7 +161,4 @@
             }
         })
     });
-
-</script>
-
-</html>
+</script></html>
