--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 
         });
+
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -34,6 +35,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
+
     </script>
     <title>MinionsArt Tutorials</title>
 
@@ -113,9 +115,8 @@
         <button class="tablinks" onclick="showfilter(event,'video');">Video</button>
         <button class="tablinks" onclick="showfilter(event,'other');">Other</button>
 
+
     </div>
-
-
 
 
 
@@ -161,4 +162,7 @@
             }
         })
     });
-</script></html>
+
+</script>
+
+</html>
