--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="tab">
-        <button class="tablinks" id="allbutton" onclick="showAllPostsDescending(event);">All</button>
+        <button class="tablinks" id="allbutton" onclick="showfilter(event);">All</button>
         <button class="tablinks" onclick="showfilter(event,'built-in');">Built-in</button>
         <button class="tablinks" onclick="showfilter(event,'urp');">URP</button>
         <button class="tablinks" onclick="showfilter(event,'shader-graph');">Shader Graph</button>
