--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
                 <div class="date" id="postdate">Post Date</div>
                 <div class="ogdate" id="originaldate">OG Date</div>
                 <div class="typeOfPost" id="type"></div>
-                <div class="centeredbox"></div>
-                <div class="centered" id="title">Title of the post</div>
+                <div class="centeredbox">
+                    <div class="centered" id="title">Title of the post</div>
+                </div>
+
             </a>
 
             <div class="bottom-holder">
