--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
 
         });
-
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -38,7 +37,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
-
     </script>
     <title>MinionsArt Tutorials</title>
 
@@ -109,6 +107,7 @@
 
     <div class="tab">
         <button class="tablinks" id="allbutton" onclick="showfilter(event);">All</button>
+        <button class="tablinks" onclick="showfilter(event,'godot');">Godot</button>
         <button class="tablinks" onclick="showfilter(event,'built-in');">Built-in</button>
         <button class="tablinks" onclick="showfilter(event,'urp');">URP</button>
         <button class="tablinks" onclick="showfilter(event,'shader-graph');">Shader Graph</button>
@@ -167,7 +166,4 @@
             }
         })
     });
-
-</script>
-
-</html>
+</script></html>
