--- a/index.html
+++ b/index.html
@@ -1,169 +1,139 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en">
-
-<head>
-
-    <link rel="stylesheet" type="text/css" href="/tutorials/style.css">
-    <link href="https://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet">
-    <link rel="shortcut icon" href="/tutorials/Images/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <script type="text/javascript" language="javascript" src="/tutorials/TutData.json"></script>
-    <script type="text/javascript" language="javascript" src="/tutorials/Builder.js"></script>
-    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-    <meta charset="UTF-8">
-    <script>
-        $("#body").ready(function() {
-
-
-            showAllPostsDescending();
-            ShowStartButton();
-
-
-
-            //showNew();
-
-
-        });
-    </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70751511-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-70751511-2');
-    </script>
-    <title>MinionsArt Tutorials</title>
-
-    <template id="test">
-        <div class="unit_card" id="card">
-
-
-            <a class="preview-image-holder" id="linkBackground">
-                <div class="date" id="postdate">Post Date</div>
-                <div class="ogdate" id="originaldate">OG Date</div>
-                <div class="typeOfPost" id="type"></div>
-                <div class="centeredbox">
-                    <div class="centered" id="title">Title of the post</div>
-                </div>
-
-            </a>
-
-            <div class="bottom-holder">
-                <div class="description" id="postdescription">Description of the Post</div>
-
-                <a class="normal-link" id="extralink">
-                    extra link
-                </a>
-
-                <a class="patreon-link" id="patreonlink">
-                    patreon link
-                </a>
-
-            </div>
-
-
-
-
-
-        </div>
-    </template>
-
-    <template id="videoTest">
-        <iframe id="video" width="300" height="315" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </template>
-</head>
-
-<main>
-    <div class="header-img">
-
-
-        <div class="hero-text">
-            <img src="Images/minionsart.png" width="300px" style="padding-top: 20px">
-
-            <div class="header2">Tutorials</div>
-
-            <a href="https://twitter.com/minionsart" class="fa-brands fa-twitter"></a>
-
-            <a href="https://www.youtube.com/c/MinionsArt" class="fa-brands fa-youtube"></a>
-
-            <a href="https://www.twitch.tv/minionsart" class="fa-brands fa-twitch"></a>
-
-            <a href="https://www.patreon.com/minionsart" class="fa-brands fa-patreon"></a>
-
-
-
-        </div>
-
-
-
-
-    </div>
-
-    <div class="tab">
-        <button class="tablinks" id="allbutton" onclick="showfilter(event);">All</button>
-        <button class="tablinks" onclick="showfilter(event,'godot');">Godot</button>
-        <button class="tablinks" onclick="showfilter(event,'built-in');">Built-in</button>
-        <button class="tablinks" onclick="showfilter(event,'urp');">URP</button>
-        <button class="tablinks" onclick="showfilter(event,'shader-graph');">Shader Graph</button>
-        <button class="tablinks" onclick="showfilter(event,'3d');">3D</button>
-        <button class="tablinks" onclick="showfilter(event,'texturing');">Textures</button>
-        <button class="tablinks" onclick="showfilter(event,'asset-pack');">Asset Pack</button>
-        <button class="tablinks" onclick="showfilter(event,'gameplay');">Gameplay</button>
-        <button class="tablinks" onclick="showfilter(event,'design');">Design</button>
-        <button class="tablinks" onclick="showfilter(event,'video');">Video</button>
-        <button class="tablinks" onclick="showfilter(event,'other');">Other</button>
-
-
-    </div>
-
-
-
-    <div class="mainbody">
-        <div id="modS" style=" width:400px;; padding-top: 5px; margin:auto">
-            <div style="margin-right: auto; margin-left: auto; width: 300px;">
-                <input type="text" placeholder="Search.." style="margin-right: auto; margin-left: auto; width: 200px;color: black" id="searchInput">
-                <button type="submit" id="button"><i class="fa fa-search"></i></button>
-
-
-            </div>
-        </div>
-        <div class="grid-container" id="output"></div>
-
-    </div>
-
-
-
-
-</main>
-
-
-<body>
-
-
-
-</body>
-<script>
-    $(document).ready(function() {
-
-        $('#button').click(function() {
-            searchData();
-        });
-    });
-
-
-
-    $(function() {
-
-        $("#searchInput").keyup(function(event) {
-            if (event.which === 13) {
-                searchData();
+    <head>
+        <link rel="stylesheet" type="text/css" href="/tutorials/style.css" />
+        <link href="https://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet" />
+        <link rel="shortcut icon" href="/tutorials/Images/favicon.ico" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+        <script type="text/javascript" src="/tutorials/TutData.json"></script>
+        <script type="text/javascript" src="/tutorials/Builder.js"></script>
+        <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+        <meta charset="UTF-8" />
+        <script>
+            $("#body").ready(function () {
+                CheckData();
+
+                //  handleCollapsible();
+            });
+
+            async function HandlePage() {
+                showAllPostsDescending();
+                ShowStartButton();
             }
-        })
-    });
-</script></html>
+            /*  $("#body").ready(function () {
+                showAllPostsDescending();
+                ShowStartButton();
+
+                //showNew();
+            });*/
+        </script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70751511-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "UA-70751511-2");
+        </script>
+        <title>MinionsArt Tutorials</title>
+
+        <template id="test">
+            <div class="unit_card" id="card">
+                <a class="preview-image-holder" id="linkBackground">
+                    <div class="date" id="postdate">Post Date</div>
+                    <div class="ogdate" id="originaldate">OG Date</div>
+                    <div class="typeOfPost" id="type"></div>
+                    <div class="centeredbox">
+                        <div class="centered" id="title">Title of the post</div>
+                    </div>
+                </a>
+
+                <div class="bottom-holder">
+                    <div class="description" id="postdescription">Description of the Post</div>
+
+                    <a class="normal-link" id="extralink"> extra link </a>
+
+                    <a class="patreon-link" id="patreonlink"> patreon link </a>
+                </div>
+            </div>
+        </template>
+
+        <template id="videoTest">
+            <iframe
+                id="video"
+                width="300"
+                height="315"
+                title=""
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </template>
+    </head>
+
+    <body>
+        <div class="header-img">
+            <div class="hero-text">
+                <img src="Images/minionsart.png" width="300px" style="padding-top: 20px" />
+
+                <div class="header2">Tutorials</div>
+
+                <a href="https://twitter.com/minionsart" class="fa-brands fa-twitter"></a>
+
+                <a href="https://www.youtube.com/c/MinionsArt" class="fa-brands fa-youtube"></a>
+
+                <a href="https://www.twitch.tv/minionsart" class="fa-brands fa-twitch"></a>
+
+                <a href="https://www.patreon.com/minionsart" class="fa-brands fa-patreon"></a>
+            </div>
+        </div>
+
+        <div class="tab">
+            <button class="tablinks" id="allbutton" onclick="showfilter(event);">All</button>
+            <button class="tablinks" onclick="showfilter(event,'godot');">Godot</button>
+            <button class="tablinks" onclick="showfilter(event,'built-in');">Built-in</button>
+            <button class="tablinks" onclick="showfilter(event,'urp');">URP</button>
+            <button class="tablinks" onclick="showfilter(event,'shader-graph');">Shader Graph</button>
+            <button class="tablinks" onclick="showfilter(event,'3d');">3D</button>
+            <button class="tablinks" onclick="showfilter(event,'texturing');">Textures</button>
+            <button class="tablinks" onclick="showfilter(event,'asset-pack');">Asset Pack</button>
+            <button class="tablinks" onclick="showfilter(event,'gameplay');">Gameplay</button>
+            <button class="tablinks" onclick="showfilter(event,'design');">Design</button>
+            <button class="tablinks" onclick="showfilter(event,'video');">Video</button>
+            <button class="tablinks" onclick="showfilter(event,'other');">Other</button>
+        </div>
+
+        <div class="mainbody">
+            <div id="modS" style="width: 400px; padding-top: 5px; margin: auto">
+                <div style="margin-right: auto; margin-left: auto; width: 300px">
+                    <input
+                        type="text"
+                        placeholder="Search.."
+                        style="margin-right: auto; margin-left: auto; width: 200px; color: black"
+                        id="searchInput" />
+                    <button type="submit" id="button"><i class="fa fa-search"></i></button>
+                </div>
+            </div>
+            <div class="grid-container" id="output"></div>
+        </div>
+
+        <script>
+            $(document).ready(function () {
+                $("#button").click(function () {
+                    searchData();
+                });
+            });
+
+            $(function () {
+                $("#searchInput").keyup(function (event) {
+                    if (event.which === 13) {
+                        searchData();
+                    }
+                });
+            });
+        </script>
+    </body>
+</html>
